= sbt-rat changelog

== Version 0.6.1

Bug Fixes::
* Stop categorizing TypeScript files as binary files.

Changes::
* Update to Apache Rat 0.13.
* Update changelog for prior release.

== Version 0.6.0

Changes::
* Change task names from `auditCheck` to `ratCheck` and `auditReport` to
  `ratReport` to avoid namespace conflicts with other sbt plugins.
* Change setting names to all use `rat` as a prefix.
* Change names overall to better match the naming scheme used in the maven
  plugin.
* Remove `maxErrors` setting for consistency with the maven plugin.

New Features::
* Add `ratExcludes` and `ratParseSCMIgnoresAsExcludes` settings for better
  granularity on rat checks which replaces the previous behavior of only
  checking unmanaged source files.
* Add `includeFilter` and `excludeFilter` settings for `ratReport` task.
* Add `ratReportStyle` setting to choose output style which replaces the
  previous behavior of outputing all supported formats.

== Version 0.5.1

Bug Fixes::
* Fix list indentation in asciidoc report.
* Remove unrendered code tags in asciidoc report.

== Version 0.5.0

New Features::
* Add sbt-release automated release pipeline.
* Add AsciiDoc output file in addition to plain text.

== Version 0.2

New Features::
* Add cross sbt builds for 0.13 and 1.0.

== Version 0.1

New Features::
* Add `auditReport` and `auditCheck` tasks.
* Add allowed license setting keys.
* Add default licenses in default settings.
* Add Maven Central release.
* Add Travis CI build.